checkbox alignement corrected

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -2,3 +2,7 @@
   background-color: $yellow;
   width: 30%;
 }
+
+#user_remember_me {
+  left: -8px;
+}
